Fix overflow and add CheckButton component

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -64,16 +64,14 @@
 }
 
 .main {
-  height: 100%;
+  height: 100vh;
   width: 100vw;
 }
 
 .container {
-  margin-top: 1rem;
-  padding: 0 10%;
+  padding: 1rem 10%;
   width: 100%;
   height: 100vh;
-  overflow: auto;
 }
 
 .question-container {
